Add the ability to use virtual threads