@@ -6,10 +6,20 @@ plugins {
 group 'liteweb'
 version '1.0'
 
-sourceCompatibility = 11
+targetCompatibility = JavaVersion.VERSION_20
+targetCompatibility = JavaVersion.VERSION_20
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview', '-Xlint:preview']
+}
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
 }
 
 repositories {
@@ -34,7 +44,7 @@ jar {
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
-    duplicatesStrategy = 'exclude'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 test {
@@ -50,15 +60,15 @@ tasks.withType(Test).configureEach {
     jacoco.excludes = ['jdk.internal.*']
 }
 
-
-tasks.create(name: "testCoverage", type: JacocoReport, dependsOn: "test") {
+tasks.register("testCoverage", JacocoReport) {
     group = "Reporting"
     description = "Generate Jacoco coverage reports for the test build."
+    dependsOn(test)
 
     reports {
-        html.enabled( true)
-        xml.enabled(true)
-        csv.enabled(true)
+        html { enabled true }
+        xml { enabled true }
+        csv { enabled true }
     }
 
     def excludes = [
